<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UbibusCars</string>
    <string name="menu_settings">Editar Perfil</string>
    <string name="title_activity_login">UbibusCars</string>
    <string name="hintCadastroNome">nome</string>
    <string name="hintCadastroEmail">email</string>
    <string name="btLoginEntrar">Entrar</string>
    <string name="btLoginCadastar">Cadastre-se</string>
    <string name="hintLoginLogin">login</string>
    <string name="hintLoginSenha">nascimento(dd/mm/yyyy)</string>
    <string name="bt_tirarFoto">Tirar foto</string>
    <string name="bt_trocarFoto">Trocar Foto</string>
    <string name="hintCadastroLogin">login</string>
    <string name="hintCadastroSenha">senha</string>
    <string name="hintCadastroNascimento">nascimento</string>
    <string name="radioCadastroMasculino">Masculino</string>
    <string name="radioCadastrFeminino">Feminino</string>
    <string name="textCadastroSexo">Sexo:</string>
    <string name="btCadastroCadastrar">Cadastrar</string>
    <string name="textAnunciarDestino">Destino:</string>
    <string name="textAnunciarOrigem">Origem:</string>
    <string name="btAnunciar">Anunciar</string>
    <string name="hintAnunciarEndereco">Endereço</string>
    <string name="hintAnunciarHorario">Horário</string>
    <string name="radioPede">Pede</string>
    <string name="radioOferece">Oferece</string>
    <string name="btDefinirHorario">Definir</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_solicita_carona">Solicitar Carona</string>
    <string name="textSolicitaUsuario">Usuário </string>
    <string name="textSolicitaCarona"> carona</string>
    <string name="textSolicitaHorario">Horário:</string>
    <string name="hintSolicitaMensagem">Digite uma mensagem </string>
    <string name="btSolicitar">Solicitar</string>
    <string name="title_activity_resposta_solicitacao">Resposta da Solicitação</string>
    <string name="btRespostaAceitar">Aceitar</string>
    <string name="btRespostaRecusar">Recusar</string>
    <string name="textSituacao">Situação:</string>
    <string name="title_activity_altera_dados">Alterar Dados</string>
    <string name="bt_alterarDados">Alterar Dados</string>
    <string name="menu_deletar">Excluir Conta</string>
    <string name="menu_forgot_pass">Esqueci Minha Senha</string>
    <string name="title_activity_esqueci_senha">Esqueceu sua senha?</string>
    <string name="txt_esqueci_senha_email">Email</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_editarCarona">Excluir Carona</string>
    <string name="title_activity_perfil">Meu Perfil</string>
    <string name="txt_esqueciSenha">Esqueceu sua senha?  </string>
    <string name="title_activity_nova_senha">NovaSenhaActivity</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_minhas_caronas">MinhasCaronasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_excluir_carona">ExcluirCaronaActivity</string>
    <string name="btExcluirSolicitacao">Excluir Carona</string>
    <string name="menu_sobre">Sobre</string>
    <string name="title_activity_sobre">SobreActivity</string>
    <string name="hintLugares">Vagas disponíveis:</string>

    <string-array name="quantidade_vagas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="hintCadastroCarroParticularNome">nome do carro</string>
    <string name="btSalvarAlerta">Salvar Alerta</string>
    <string name="service_name">Busca Alertas</string>
    <string name="title_activity_alertas">Alertas</string>
    <string name="btEnviaAvaliacao">Enviar Avaliação</string>
    <string name="title_activity_avaliacao">Avaliar</string>
    <string name="bt_verAvaliacaoes">Ver Avaliações</string>
    <string name="title_activity_lista_avaliacoes">ListaAvaliacoesActivity</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>

</resources>
