<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp" >

        <ImageView
            android:id="@+id/imageViewFotoPadrao"
            android:layout_width="80dp"
  			android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="172dp"
            android:layout_height="84dp"
            android:layout_weight="0.03"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonTirarFoto"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="31dp"
                android:layout_marginLeft="10dp"
                android:text="@string/bt_tirarFoto" />

            <Button
                android:id="@+id/buttonMudarFoto"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:text="@string/bt_trocarFoto" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextCadastroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:maxLength="50"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hintCadastroNome"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCadastroEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCadastroNome"
        android:layout_alignRight="@+id/editTextCadastroNome"
        android:maxLength="50"
        android:layout_below="@+id/editTextCadastroNome"
        android:ems="10"
        android:hint="@string/hintCadastroEmail"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCadastroEmail"
        android:layout_alignRight="@+id/editTextCadastroEmail"
        android:layout_below="@+id/editTextCadastroEmail"
        android:weightSum="2" >

        <EditText
            android:id="@+id/editTextCadastroSenha"
            android:layout_width="match_parent"
            android:maxLength="20"
            android:layout_height="wrap_content"
            android:hint="@string/hintCadastroSenha"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCadastroEmail"
        android:layout_alignRight="@+id/editTextCadastroEmail"
        android:layout_below="@+id/linearLayout2"
        android:weightSum="2" >

        <EditText
            android:id="@+id/editTextCadastroNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="10"
            android:ems="10"
            android:hint="@string/hintCadastroNascimento"
            android:inputType="date" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupCadastroSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioCadastroMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioCadastroMasculino" />

        <RadioButton
            android:id="@+id/radioCadastroFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioCadastrFeminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCadastroSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignTop="@+id/radioGroupCadastroSexo"
        android:text="@string/textCadastroSexo" />

    <Button
        android:id="@+id/buttonCadastroCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCadastroSexo"
        android:layout_alignRight="@+id/radioGroupCadastroSexo"
        android:layout_below="@+id/radioGroupCadastroSexo"
        android:text="@string/btCadastroCadastrar" />

</RelativeLayout>

</ScrollView>