<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<RelativeLayout android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/textAnunciarOrigem"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextOrigemEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/hintAnunciarEndereco"
        android:focusable="false"
        android:inputType="textNoSuggestions"
        android:onClick="escolherEndOrigem" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextOrigemEndereco" >

        <EditText
            android:id="@+id/editTextOrigemHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hintAnunciarHorario"
            android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/textAnunciarDestino"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextDestinoEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/hintAnunciarEndereco"
        android:focusable="false"
        android:inputType="textPersonName"
        android:onClick="escolherEndDestino" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextDestinoEndereco" >

        <EditText
            android:id="@+id/editTextDestinoHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hintAnunciarHorario"
            android:inputType="time" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupAnunciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioPede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioPede" />

        <RadioButton
            android:id="@+id/radioOferece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioOferece" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAnunciarCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroupAnunciar"
        android:text="@string/btCadastroCadastrar" />

</RelativeLayout>

</ScrollView>