<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logoubibus" />

    <EditText
        android:id="@+id/LoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/hintCadastroEmail"
        android:inputType="textEmailAddress"
        android:text="newuser@gmail.com" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/SenhaEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LoginEditText"
        android:layout_alignRight="@+id/LoginEditText"
        android:layout_below="@+id/LoginEditText"
        android:ems="10"
        android:hint="@string/hintLoginSenha"
        android:inputType="textPassword"
        android:text="123456" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignLeft="@+id/SenhaEditText"
        android:layout_alignRight="@+id/SenhaEditText"
        android:layout_below="@+id/SenhaEditText"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/btLoginEntrar" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/btLoginCadastar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/textViewEsqueciSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/txt_esqueciSenha"
            android:textColor="#003366"
            android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>

</ScrollView>
