<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageViewSolicitacaoFoto"
        android:layout_width="80dp"
  		android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageViewSolicitacaoFoto"
        android:layout_marginLeft="41dp"
        android:layout_toRightOf="@+id/imageViewSolicitacaoFoto"
        android:text="Nome do Usuario" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewSolicitacaoFoto"
        android:layout_below="@+id/imageViewSolicitacaoFoto"
        android:layout_marginTop="44dp"
        android:text="@string/textAnunciarOrigem" />

    <TextView
        android:id="@+id/textViewSolicitaOrigem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="Local de Origem" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/textSolicitaHorario" />

    <TextView
        android:id="@+id/textViewSolicitaHorarioOrigem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textViewSolicitaOrigem"
        android:text="HOrário da Carona" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:text="@string/textAnunciarDestino" />

    <TextView
        android:id="@+id/textViewSolicitaDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textViewSolicitaHorarioOrigem"
        android:text="Local de Destino" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="15dp"
        android:text="@string/textSolicitaHorario" />

    <TextView
        android:id="@+id/textViewSolicitaHorarioDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textViewSolicitaDestino"
        android:text="TextView" />

    <EditText
        android:id="@+id/editTextSolicitaMensagem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Digite uma mensagem"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonEnviarSolicitacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSolicitaMensagem"
        android:layout_centerHorizontal="true"
        android:text="@string/btSolicitar" />

    <TextView
        android:id="@+id/textViewTipoCarona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textViewNomeUsuario"
        android:text="Pede/recebe" />

</RelativeLayout>
